# langgrap_practice

./: .gitignore  10_persistence.ipynb  11_tools.ipynb  12_mcp.py  13_rag.ipynb  14_hitl.ipynb  15_subgraph_shared.ipynb  15_subgraphs.ipynb  1_bmi_workflow.ipynb  2-simple-llm-workflow.ipynb  3_prompt_chaining.ipynb  4_batsman_workflow.ipynb  5_upsc_essay_workflow.ipynb  6_quadratic_equation.ipynb  7_review_reply_workflow.ipynb  8_X_post_generator.ipynb  9_basic_chatbot.ipynb  ai-readme  chat_with_hitl_backend.py  chatbot_without_hitl.py  database_langgraph_backend.py  database_langgraph_frontend.py  gastric_pdf_chatGPT.py  gastric_pdf_chatGPT_2.py  google-llm.py  langgraph_backend.py  langgraph_frontend.py  mcl_frontend_langgraph.py  mcp_backend_langgraph.py  pyproject.toml  rag_backend_langgraph.py  rag_frontend_langgraph.py  reset_venv.sh  streaming_frontend_threading.py  streamlit_01.py  streamlit_frontend.py  tool_backend_langgraph.py  tool_frontend_langgraph.py
