[project]
name = "langgraph_tuts_01"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.1.0",
    "langchain-google-genai>=3.2.0",
    "langchain-ollama>=1.0.0",
    "langgraph>=1.0.4",
    "notebook>=7.4.7",
    "streamlit>=1.51.0",
]
